--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 .wrapper{
   width: 1920px;
  margin: 0 auto;
+ margin-top: 140px;
+ /* background-color: blue; */
+}
+.header{
+    width: 1421px;
+margin: 0 auto;
+}
+.section{
+  width: 1420px;
+margin: 0 auto;
 }
