--- a/style.css
+++ b/style.css
@@ -55,4 +55,45 @@ background: white;
   right: 0px;
   top: 230px;
 }
-
+/*  */
+.containerr{
+width: 340px;
+height: 544px;
+border-radius: 10px;
+/* background-color: rgb(27, 25, 25); */
+position: relative;
+overflow: hidden;
+display: flex;
+justify-content: center;
+    align-items: center;
+}
+.containerr::before{
+content: "";
+width: 700px;
+height: 750px;
+border-radius: 10px;
+background-image: conic-gradient(transparent,transparent,transparent,#956D84);
+position: absolute;
+}
+.containerr.active::before{
+   animation: rotate 4s linear infinite;
+}
+@keyframes rotate {
+0%{
+transform: rotate(0deg);
+}
+100%{
+transform: rotate(360deg);
+}
+}
+.boss-div{
+z-index: 1;
+background-color: white;
+}
+.footer{
+width: 100%;
+height: 348px;
+margin-top: 85px;
+margin: 0 auto;
+background-color: #333333;
+}
