--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ margin-top: 140px;
 .map-container {
   width: 1420px;
   height: 508px;
-  margin: 0 auto;
-  position: relative;
+  display: flex;
   z-index: -100;
+  margin: 0 auto;
 }
 .map-container iframe {
   width: 100%;
@@ -29,10 +29,9 @@ margin-top: 140px;
 }
 .item-block{
   width: 380px;
+  border: 2px solid  #956D84; 
 height: 508px;
-position: absolute;
-right: 219px;
-bottom: 0px;
+border-radius: 3px;
 background: white;
 }
 .triangle-right {
